--- a/src/app/devices/add-device/add-device.component.css
+++ b/src/app/devices/add-device/add-device.component.css
@@ -19,3 +19,10 @@
 .btn-primary:hover {
     background-color: #0a58ca;
 }
+
+
+div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
