--- a/src/app/devices/view/view.component.html
+++ b/src/app/devices/view/view.component.html
@@ -1,7 +1,7 @@
 <div class="container" *ngIf="item">
     <h1>Afficher le device</h1>
 
-    <a href="#" routerLink="/liste-devices" class="btn btn-primary">Retour</a>
+    <a href="#" routerLink="/liste-devices" class="btn btn-submit">Retour</a>
 
 
     <br>
