--- a/src/app/items/liste-fournisseurs/edit/edit.component.html
+++ b/src/app/items/liste-fournisseurs/edit/edit.component.html
@@ -1,7 +1,7 @@
 <div class="container" *ngIf="item">
     <h1>Éditer le fournisseur</h1>
 
-    <a href="#" routerLink="/liste-fournisseurs" class="btn btn-primary">Retour</a>
+    <a href="#" routerLink="/liste-fournisseurs" class="btn btn-submit">Retour</a>
 
     <br>
 
@@ -20,7 +20,7 @@
     <br>
 
     <div style="text-align: center;">
-        <button class="btn btn-primary" (click)="submit()">Enregistrer</button>
+        <button class="btn btn-submit" (click)="submit()">Enregistrer</button>
     </div>
 
     <br>
