fix toggledarkmode class call + css rework

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,5 +5,5 @@
     <a routerLink="/liste-devices">Correspondance des devices</a>
     <a routerLink="/add-fournisseur">Ajouter fournisseurs</a>
     <a routerLink="/liste-devices/create">Ajouter un device</a>
-    <button (click)="toggleDarkTheme()">Toggle Light/Dark mode</button>
+   <button><a (click)="toggleDarkTheme()">Toggle Light/Dark mode</a> </button>
 </nav>
