--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -22,3 +22,55 @@
         </tr>
     </table>
 </div>
+
+
+
+
+
+ <!-- Test du tableau avec filtre -->
+
+
+<div class="container">
+    <h1>.</h1>
+  
+    <p style="text-align: center;" *ngIf="messages === null">Chargement en cours...</p>
+  
+    <!-- <mat-form-field appearance="fill">
+      <mat-label>Filter messages</mat-label>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search...">
+    </mat-form-field> -->
+  
+    <br>
+  
+    <table mat-table class="table table-bordered" *ngFor="let message of messages" matSort>
+  
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+        <td mat-cell *matCellDef="let message">{{ message.date | date: 'dd/MM/YYYY h:mm:ss a' }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="address">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Fournisseur</th>
+        <td mat-cell *matCellDef="let message">{{ message.address }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="body">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Contenu</th>
+        <td mat-cell *matCellDef="let message">{{ message.body }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="label">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Label</th>
+        <td mat-cell *matCellDef="let message">{{ message.label }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="deviceId">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Device Id</th>
+        <td mat-cell *matCellDef="let message">{{ message.deviceId }}</td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="example-element-row"></tr>
+    </table>
+  
+  </div>
