--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,76 +1,68 @@
-<div class="container">
-    <h1>Liste des messages</h1>
+<!-- <div class="container">
+  <h1>Liste des messages</h1>
 
-    <p style="text-align: center;" *ngIf="messages === null">Chargement en cours... </p>
+  <p style="text-align: center;" *ngIf="messages === null">Chargement en cours... </p>
 
-    <br>
+  <br>
 
-    <table class="table table-bordered" style="text-align: center;">
-        <tr>
-            <th>Date</th>
-            <th>Fournisseur</th>
-            <th>Contenu</th>
-            <th>Label</th>
-            <th>Device Id</th>
-        </tr>
-        <tr *ngFor="let message of messages">
-            <td>{{ message.date | date: ' dd/MM/YYYY HH:mm:ss' }}</td>
-            <td>{{ message.address }}</td>
-            <td>{{ message.body }}</td>
-            <td>{{ message.label }}</td>
-            <td>{{ message.deviceId }}</td>
-        </tr>
-    </table>
-</div>
-
-
-
-
-
- <!-- Test du tableau avec filtre -->
-
+  <table class="table table-bordered" style="text-align: center;">
+    <tr>
+      <th>Date</th>
+      <th>Fournisseur</th>
+      <th>Contenu</th>
+      <th>Libellé</th>
+      <th>Device Id</th>
+    </tr>
+    <tr *ngFor="let message of messages">
+      <td>{{ message.date | date: ' dd/MM/YYYY HH:mm:ss' }}</td>
+      <td>{{ message.address }}</td>
+      <td>{{ message.body }}</td>
+      <td>{{ message.label }}</td>
+      <td>{{ message.deviceId }}</td>
+    </tr>
+  </table>
+</div> -->
 
 <div class="container">
-    <h1>.</h1>
-  
-    <p style="text-align: center;" *ngIf="messages === null">Chargement en cours...</p>
-  
-    <!-- <mat-form-field appearance="fill">
-      <mat-label>Filter messages</mat-label>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search...">
-    </mat-form-field> -->
-  
-    <br>
-  
-    <table mat-table class="table table-bordered" *ngFor="let message of messages" matSort>
-  
-      <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-        <td mat-cell *matCellDef="let message">{{ message.date | date: 'dd/MM/YYYY h:mm:ss a' }}</td>
+
+  <h1>Liste des messages</h1>
+
+  <p style="text-align: center;" *ngIf="messages === null">Chargement en cours...</p>
+
+  <br>
+ 
+  <table mat-table class="" style="text-align: center !important;" [dataSource]="dataSource" matSort>
+
+    <ng-container matColumnDef="date" style="text-align: center;">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="matheadercell" style="padding-left: 100px">Date</th>
+      <td mat-cell *matCellDef="let message" style="text-align: center !important;">{{ message.date | date: 'dd/MM/YYYY HH:mm:ss' }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="address">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="matheadercell" style="padding-left: 100px">Fournisseur</th>
+      <td mat-cell class="centertable" *matCellDef="let message" style="text-align: center !important;">{{ message.address }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="body">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="matheadercell" style="padding-left: 100px">Contenu</th>
+      <td mat-cell *matCellDef="let message" style="text-align: center !important;">{{ message.body }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="label">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="matheadercell" style="padding-left: 100px">Label</th>
+      <td mat-cell *matCellDef="let message" style="text-align: center !important;">{{ message.label }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="deviceId">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="matheadercell" style="padding-left: 100px">Device Id</th>
+        <td mat-cell *matCellDef="let message" style="text-align: center !important;">{{ message.deviceId }}</td>
       </ng-container>
-  
-      <ng-container matColumnDef="address">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Fournisseur</th>
-        <td mat-cell *matCellDef="let message">{{ message.address }}</td>
-      </ng-container>
-  
-      <ng-container matColumnDef="body">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Contenu</th>
-        <td mat-cell *matCellDef="let message">{{ message.body }}</td>
-      </ng-container>
-  
-      <ng-container matColumnDef="label">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Label</th>
-        <td mat-cell *matCellDef="let message">{{ message.label }}</td>
-      </ng-container>
-  
-      <ng-container matColumnDef="deviceId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Device Id</th>
-        <td mat-cell *matCellDef="let message">{{ message.deviceId }}</td>
-      </ng-container>
-  
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="example-element-row"></tr>
+      <br>
+
     </table>
-  
-  </div>
+<br>
+    <mat-paginator class="pagination" [pageSizeOptions]="[100, 50, 25, 10, 5]" aria-label="Select page of users..."></mat-paginator>
+</div>
