--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,4 +3,28 @@
 
     <h2>Bienvenue sur l'application AngularApp en ligne de SMSRecovery, ou vous pouvez consulter, ajouter, et éditer vos
         messages et fournisseurs de vos appareils connectés depuis notre interface</h2>
+
+
+
+        <h1>Devices détéctés</h1>
+
+
+        <p style="text-align: center;" *ngIf="items === null">Chargement en cours... </p>
+
+    <table *ngIf="items" class="table table-bordered" style="text-align: center;">
+        <tr>
+            <th>Device id (retourné par ADB)</th>
+            <th>Url du fournisseur</th>
+            <th>Libellé</th>
+        </tr>
+        <tr *ngFor="let item of items">
+            <td>{{ item.deviceId }}</td>
+            <!-- <td>{{ item.name }}</td> -->
+            <td>{{ item.id }}</td>
+            <td>{{ item.label }}</td>
+         
+        </tr>
+    </table>
+
+
 </div>
