--- a/src/app/devices/liste-devices.component.html
+++ b/src/app/devices/liste-devices.component.html
@@ -2,7 +2,7 @@
     
     <h1>Correspondance des devices</h1>
 
-    <a href="#" routerLink="/liste-devices/create" class="btn btn-success">Ajouter un device</a>
+    <a href="#" routerLink="/liste-devices/create" class="btn btn-success">Associer un device</a>
 
     <p style="text-align: center;" *ngIf="items === null">Chargement en cours... </p>
 
