--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,6 +4,6 @@
     <a routerLink="/liste-fournisseurs">Liste des fournisseurs</a>
     <a routerLink="/liste-devices">Correspondance des devices</a>
     <a routerLink="/add-fournisseur">Ajouter fournisseurs</a>
-    <a routerLink="/liste-devices/create">Ajouter un device</a>
+    <a routerLink="/liste-devices/create">Associer un device</a>
    <button><a (click)="toggleDarkTheme()">Toggle Light/Dark mode</a> </button>
 </nav>
