--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -44,7 +44,7 @@
     </ng-container>
 
     <ng-container matColumnDef="address">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="matheadercell" style="padding-left: 100px">Fournisseur</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="matheadercell" style="padding-left: 80px">N° de Téléphone</th>
       <td mat-cell class="centertable" *matCellDef="let message" style="text-align: center !important;">{{ message.address }}</td>
     </ng-container>
 
