--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,31 +1,27 @@
 <div class="container">
     <h1>Accueil</h1>
-
-    <h2>Bienvenue sur l'application AngularApp en ligne de SMSRecovery, ou vous pouvez consulter, ajouter, et éditer vos
-        messages et fournisseurs de vos appareils connectés depuis notre interface</h2>
-
-
-
-        <h1>Devices détéctés</h1>
-
-
-        <p style="text-align: center;" *ngIf="items === null">Chargement en cours... </p>
-
+  
+    <h2>
+      Bienvenue sur l'application AngularApp en ligne de SMSRecovery, où vous pouvez consulter, ajouter et éditer vos messages et fournisseurs de vos appareils connectés depuis notre interface
+    </h2>
+  
+    <h1>Devices détectés</h1>
+  
+    <p style="text-align: center;" *ngIf="items === null">Chargement en cours...</p>
+  
     <table *ngIf="items" class="table table-bordered" style="text-align: center;">
-        <tr>
-            <th>Device id (retourné par ADB)</th>
-            <th>Url du fournisseur</th>
-            <th>Libellé</th>
-            
-        </tr>
-        <tr *ngFor="let item of items">
-            <td>{{ item.deviceId }}</td>
-            <td>{{ item.providerUrl }}</td>
-            <td routerLink="/add-fournisseur/" class="blue-link">{{ item.label }}</td>
-        </tr>
+      <tr>
+        <th>Device id (retourné par ADB)</th>
+        <th>Url du fournisseur</th>
+        <th>Libellé</th>
+      </tr>
+      <tr *ngFor="let item of items">
+        <td>{{ item.deviceId }}</td>
+        <td>{{ item.providerUrl }}</td>
+        <td>
+          <a [routerLink]="['/liste-messages']" [queryParams]="{ q: item.label }" class="blue-link">{{ item.label }}</a>
+        </td>
+      </tr>
     </table>
-
-
-</div>
-
-
+  </div>
+  
